Archive2/b7/e33afdf65db8aa/output
main.cpp:55:15: warning: empty parentheses interpreted as a function declaration [-Wvexing-parse]
     student a();
              ^~
main.cpp:55:15: note: remove parentheses to declare a variable
     student a();
              ^~
main.cpp:56:6: error: base of member reference is a function; perhaps you meant to call it with no arguments?
     a.READ();
     ^
      ()
1 warning and 1 error generated.
